--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html class="no-js"> <head> <meta charset="utf-8"> <title>Barnacle Translations</title> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" type="text/css"> <link href="http://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800" rel="stylesheet" type="text/css"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory--> <link rel="stylesheet" href="styles/vendor.c492fbb5.css"> <link rel="stylesheet" href="styles/main.ba035e2a.css">  <body ng-app="ngAppApp"> <div ng-view="" class="main-container"></div> <!--if lt IE 7
+<!DOCTYPE html> <html class="no-js"> <head> <meta charset="utf-8"> <title>Barnacle Translations</title> <meta name="description" content=""> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <meta name="viewport" content="width=device-width,initial-scale=1"> <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" type="text/css"> <link href="http://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800" rel="stylesheet" type="text/css"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory--> <link rel="stylesheet" href="styles/vendor.c492fbb5.css"> <link rel="stylesheet" href="styles/main.5f11f1c3.css">  <body ng-app="ngAppApp" data-spy="scroll" data-target="#navigation" data-offset="80"> <div ng-view="" class="main-container"></div> <!--if lt IE 7
     p.browsehappy
       | You are using an
       strong outdated
@@ -11,4 +11,4 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       
       ga('create', 'UA-XXXXX-X');
-      ga('send', 'pageview');</script> <script src="scripts/oldieshim.ff90b0fb.js"></script> <script src="scripts/vendor.a8ed51fa.js"></script> <script src="https://maps.googleapis.com/maps/api/js?sensor=true" type="text/javascript"></script> <script src="scripts/scripts.cd5c7d31.js"></script>  
+      ga('send', 'pageview');</script> <script src="scripts/oldieshim.ff90b0fb.js"></script> <script src="scripts/vendor.a8ed51fa.js"></script> <script src="https://maps.googleapis.com/maps/api/js?sensor=true" type="text/javascript"></script> <script src="scripts/scripts.4cc8c267.js"></script>  
